<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <ImageView
            android:id="@+id/comp_photo"
            android:layout_width="83dp"
            android:layout_height="79dp"
            android:contentDescription="@string/photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#FFFFFF"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/comp_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_home"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/berufsfeld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/berufsfeld"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/stelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stelle"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/eisatzort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einsatzort"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>