<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShowFullInfo">


    <TextView
        android:id="@+id/mainInfo1"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_border_black_24dp"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <ImageView
        android:id="@+id/comp_details"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company_details"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/comp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comp_details"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/details_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:scrollbars="vertical"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comp_name"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/design_default_color_primary"
                    tools:ignore="DuplicateIds,MissingConstraints" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/ihr_aufgabengebiet"
                    android:text="@string/ihr_aufgabengebiet"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/mainInfo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/ihr_profil"
                    android:text="@string/ihr_profil"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/mainInfo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/kontakt"
                    android:text="@string/kontakt"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/mainInfo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:textSize="17sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/anschrift"
                    android:text="@string/anschrift"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/mainInfo5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:textSize="17sp" />



            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>